--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 .gradle
 /build/
+.idea
+out
+*.ipr
+*.iws
+*.iml
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -12,3 +17,8 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+*.jar
+*.properties
+gradlew
+*.bat
+settings.gradle
